<resources>
    <string name="dialog_fire_missiles"></string>
    <string name="fire"></string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accepted">Accepted</string>
    <string name="account_kit_client_token">bea476ea090bfcf0e8ebd6b7ee5ca3f4</string>
    <string name="action_create_channel">Create channel</string>
    <string name="action_logout">Logout</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_settings">Clear All</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_start_login">Done</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="ak_protocol_login_scheme">akbea476ea090bfcf0e8ebd6b7ee5ca3f4</string>
    <string name="all_open_channels">Open Channels</string>
    <string name="also_on_call">Also on call:</string>
    <string name="app_name">buzzapp</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at">"@"</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_screen_capture">screenShot</string>
    <string name="bucketname">BucketName : %1$s</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com_accountkit_account_verified">Account verified!</string>
    <string name="com_accountkit_button_begin">Begin</string>
    <string name="com_accountkit_button_cancel">Cancel</string>
    <string name="com_accountkit_button_confirm">Confirm</string>
    <string name="com_accountkit_button_continue">Continue</string>
    <string name="com_accountkit_button_edit">EDIT</string>
    <string name="com_accountkit_button_log_in">Log In</string>
    <string name="com_accountkit_button_next">Next</string>
    <string name="com_accountkit_button_ok">OK</string>
    <string name="com_accountkit_button_resend_code_countdown">Resend code to SMS in %1$d</string>
    <string name="com_accountkit_button_resend_code_in">Send SMS Again in %1$d</string>
    <string name="com_accountkit_button_resend_sms">Send SMS Again</string>
    <string name="com_accountkit_button_resend_sms_code">Resend SMS code</string>
    <string name="com_accountkit_button_resend_whatsapp">Resend code to WhatsApp</string>
    <string name="com_accountkit_button_send">Send</string>
    <string name="com_accountkit_button_send_code_in_call">Get a Call</string>
    <string name="com_accountkit_button_send_code_in_call_details">Get your code in a voice call</string>
    <string name="com_accountkit_button_send_code_in_call_from_facebook_details">Get your code in a voice call from Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb">Get a Code on Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb_details">Code will arrive as a Facebook notification</string>
    <string name="com_accountkit_button_send_code_in_sms">Get an SMS Code</string>
    <string name="com_accountkit_button_send_code_in_sms_details">Get a text message with your code.</string>
    <string name="com_accountkit_button_send_code_in_whatsapp">Get a WhatsApp Code</string>
    <string name="com_accountkit_button_send_code_in_whatsapp_details">Get a message sent to WhatsApp with your code.</string>
    <string name="com_accountkit_button_send_code_through_fb">Get Code on Facebook</string>
    <string name="com_accountkit_button_send_code_through_fb_details">It will arrive as a Facebook notification</string>
    <string name="com_accountkit_button_start">Start</string>
    <string name="com_accountkit_button_start_over">Try Again</string>
    <string name="com_accountkit_button_submit">Submit</string>
    <string name="com_accountkit_button_use_sms">Use SMS</string>
    <string name="com_accountkit_button_use_whatsapp_icon">Use ◯</string>
    <string name="com_accountkit_check_email">Open your Email</string>
    <string name="com_accountkit_code_change_number">Change Number</string>
    <string name="com_accountkit_code_phonenumber_and_change">%1$s. Change Number</string>
    <string name="com_accountkit_code_sent_to">Verify your mobile number %1$s</string>
    <string name="com_accountkit_code_sent_to_verify">Verify your mobile number</string>
    <string name="com_accountkit_confirmation_code_agreement">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt; and &lt;a href=%4$s&gt;cookie use&lt;/a&gt;.</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt;, &lt;a href=%4$s&gt;cookie use&lt;/a&gt; and the &lt;a href=%5$s&gt;Privacy Policy&lt;/a&gt; of %6$s.</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt;, &lt;a href=%4$s&gt;cookie use&lt;/a&gt; and the &lt;a href=%5$s&gt;Privacy Policy&lt;/a&gt; and &lt;a href=%6$s&gt;Terms of Service&lt;/a&gt; of %7$s.</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms_instant_verification">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt;, &lt;a href=%4$s&gt;cookie use&lt;/a&gt; and the &lt;a href=%5$s&gt;Privacy Policy&lt;/a&gt; and &lt;a href=%6$s&gt;Terms of Service&lt;/a&gt; of %7$s. &lt;a href=%8$s&gt;Learn more&lt;/a&gt; about how your account was verified.</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_instant_verification">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt;, &lt;a href=%4$s&gt;cookie use&lt;/a&gt; and the &lt;a href=%5$s&gt;Privacy Policy&lt;/a&gt; of %6$s. &lt;a href=%7$s&gt;Learn more&lt;/a&gt; about how your account was verified.</string>
    <string name="com_accountkit_confirmation_code_agreement_instant_verification">Tap %1$s to accept Facebook\'s &lt;a href=%2$s&gt;Terms&lt;/a&gt;, &lt;a href=%3$s&gt;Data Policy&lt;/a&gt; and &lt;a href=%4$s&gt;cookie use&lt;/a&gt;. &lt;a href=%5$s&gt;Learn more&lt;/a&gt; about how your account was verified.</string>
    <string name="com_accountkit_confirmation_code_text">I didn\'t get a code</string>
    <string name="com_accountkit_confirmation_code_title">Enter your code</string>
    <string name="com_accountkit_email_invalid">This email is incorrect. Please try again.</string>
    <string name="com_accountkit_email_loading_title">Verifying your email address …</string>
    <string name="com_accountkit_email_login_retry_title">Confirm your email</string>
    <string name="com_accountkit_email_login_text">Tap %1$s to get an email confirmation from Account Kit by Facebook to help you use %2$s. You don\'t need a Facebook account to use it. &lt;a href=%3$s&gt;Learn how Facebook uses your info&lt;/a&gt;.</string>
    <string name="com_accountkit_email_login_title">Enter your email address</string>
    <string name="com_accountkit_email_not_received">Resend Email</string>
    <string name="com_accountkit_email_verify_title">Open the email and confirm your email address</string>
    <string name="com_accountkit_enter_code_sent_to">Enter the code that was sent to %1$s</string>
    <string name="com_accountkit_error_title">A system issue occurred. Please try again.</string>
    <string name="com_accountkit_facebook_code_entry_title">Enter your code from Facebook</string>
    <string name="com_accountkit_logging_in">Logging in…</string>
    <string name="com_accountkit_other_ways_to_get_code">Other ways to get code:</string>
    <string name="com_accountkit_phone_error_title">Please enter a valid mobile number.</string>
    <string name="com_accountkit_phone_loading_title">Verifying your number…</string>
    <string name="com_accountkit_phone_login_retry_title">Confirm your mobile number</string>
    <string name="com_accountkit_phone_login_text">Tap %1$s to verify your account with Account Kit powered by Facebook. You don’t need a Facebook account to use Account Kit. An SMS may be sent to verify your number. Message and data rates may apply. &lt;a href=%2$s&gt;Learn how Facebook uses your info&lt;/a&gt;.</string>
    <string name="com_accountkit_phone_login_title">Enter your mobile number</string>
    <string name="com_accountkit_phone_sending_code_on_fb_title">Sending code on Facebook…</string>
    <string name="com_accountkit_phone_update_title">Enter your new mobile number</string>
    <string name="forgot_tc">By resetting your details, you are agreeing to buzzapp\'s</string>
    <string name="forgot_text">Enter your info to reset Sign in details</string>
    <string name="forgot_text1"> Email ID</string>
    <string name="terms_and_conditiions">Terms &amp; Conditions</string>
    <string name="menu_mute">Mute Notification</string>
    <string name="menu_remove_unfriend">Remove/Unfriend</string>
    <string name="menu_follow">Follow</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_leave_group">Leave Group</string>
    <string name="menu_email_chat">Email Chat</string>
    <string name="menu_block">Block</string>
</resources>