<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_gravity="center"
                android:background="@mipmap/buzz_logo_240"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="35dp"/>
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="Forgot My Details"/>
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginRight="40dp">
                <View android:layout_gravity="center" android:background="@color/light_pink_col" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="1dp" android:layout_marginTop="5dp"/>
                <TextView android:textSize="14sp"
                    android:gravity="center" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/forgot_text"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="40dp" android:layout_marginRight="40dp">
                <RelativeLayout android:id="@+id/relative_layout_mobile_or_email"
                    android:layout_width="wrap_content"
                    android:visibility="visible"
                    android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <EditText android:textSize="14sp"
                        android:gravity="center"

                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/et_buzz_id"
                        android:background="@null"
                        android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Enter your Email id" android:ems="10" android:singleLine="true" android:maxLength="100"  android:layout_centerHorizontal="true"/>
                    <View android:background="@color/light_pink_col" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="5dp" android:layout_below="@+id/et_buzz_id" android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relative_layout_passkey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <EditText android:textSize="14sp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/et_passkey"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/forgot_text1"
                        android:ems="10" android:maxLength="100"
                        android:digits="qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM@."
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        />
                    <View android:background="@color/light_pink_col" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="5dp" android:layout_below="@+id/et_passkey" android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                    <LinearLayout android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView android:textSize="14sp"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/pass_key"
                            android:background="@null"
                            android:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Select your Security code"
                            android:layout_centerVertical="true"/>
                        <LinearLayout android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/linear_xx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/pass_key">
                            <LinearLayout
                                android:background="@drawable/signin_shape"
                                android:layout_width="90dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="5dp">
                                <Spinner
                                    android:id="@+id/alphabets_spinner_forgorpassword"
                                    android:padding="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:dropDownWidth="60dp"
                                    android:spinnerMode="dropdown"/>
                            </LinearLayout>
                            <LinearLayout android:background="@drawable/signin_shape" android:layout_width="90dp" android:layout_height="30dp" android:layout_marginLeft="10dp">
                                <Spinner
                                    android:id="@+id/alphabets_spinner_numeric_code"
                                    android:padding="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"

                                    android:dropDownWidth="60dp" android:spinnerMode="dropdown"/>
                            </LinearLayout>
                            <LinearLayout android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp">
                                <ImageView android:gravity="right" android:id="@+id/question_mark_hint" android:background="@drawable/question_sign" android:layout_width="20dp" android:layout_height="20dp" android:layout_alignParentRight="true"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout android:orientation="horizontal"
                android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="30dp" android:layout_marginRight="40dp">
                <Button android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/reset_password" android:background="@drawable/signin_shape" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="30dp" android:text="Reset" android:layout_centerVertical="true" android:textAllCaps="false"/>
            </RelativeLayout>
            <TextView android:textSize="12sp" android:textColor="@color/color_white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="30dp" android:text="@string/forgot_tc"/>
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginRight="40dp">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="12sp" android:textColor="@color/app_color_pink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Privacy policies"
                        android:id="@+id/privacypolicy"/>
                    <View android:background="@color/app_color_pink" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="2dp"/>
                </LinearLayout>
                <TextView android:textColor="@color/color_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="and"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/termandcondition"
                        android:textSize="12sp" android:textColor="@color/app_color_pink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditiions"/>
                    <View android:background="@color/app_color_pink" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="2dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>